--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
-.vscode/settings.json
+# Dependency directories
+node_modules/
+bower_components/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build files
+dist/
+build/
+*.cache
+*.log
+
+# Temporary files
+*.tmp
+*.swp
+*.sublime-project
+*.sublime-workspace
+.DS_Store
+Thumbs.db
+
+# Generated files
+*.min.js
+*.min.css
+*.map
+
+# Environment variables
+.env
+.env.local
+
+# IDEs and Editors
+.vscode/
+.idea/
+*.iml
+*.code-workspace
+
+# GitHub Pages artifacts
+_site/
+.sass-cache/
+
+# Files specific to optional tools
+package-lock.json
+yarn.lock
+
+# Ignore precompiled assets (if any)
+*.bak
+*.old
